--- a/templates/name.html
+++ b/templates/name.html
@@ -53,7 +53,7 @@ mark{
 </head>
 <body>
 <div class="context">
-    <p>My text content</p>
+    <p>Clinical Trial</p>
 </div>
 
 <div>
@@ -63,6 +63,7 @@ mark{
     <input type="submit" value="Submit" />
 </form>
 </div>
+<div class="message" id="testbox"></div>
 <div class="message" id="msgbox"></div>
 <script>
 var instance = new Mark(document.querySelector("#msgbox"));
@@ -74,10 +75,10 @@ var instance = new Mark(document.querySelector("#msgbox"));
         };
 
 $('#test').submit(function(e){
-    console.log($(this).serialize())
+
     $.post('./file/',$(this).serialize(),function(data){
         $('#msgbox').empty().append(data)
-         instance.mark("study",options);
+         instance.mark($('#id_term').val(),options);
 
     });
     e.preventDefault();
