--- a/templates/trail_highlight.html
+++ b/templates/trail_highlight.html
@@ -3,30 +3,71 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="{% static 'js/mark.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/master.css' %}" type="text/css" media="screen" charset="utf-8" />
 <style>
 mark{
     background: orange;
     color: black;
-    font-size:200%;
+
 }
 </style>
 </head>
 <body>
-<div class="context">
-    <p>Clinical Trial</p>
+
+<div id="wrapper" class="span-12">
+	<div id="pages">
+		<ul>
+			<li><a href="">PTEN</a></li>
+		</ul>
+	</div>
+
+	<div id="header" class="col last span-12">
+		<h1><span class="amp"> Clinical </span> Trial</h1>
+
+	</div>
+
+	<div id="content" class="col span-9" >
+		<div class="col last span-9">
+		<h4>Search Result</h4>
+		</div>
+
+		<div class="post span-9" >
+
+			<div class="post-content last span-9 nudge-2">
+			<h3> Welcome to Clinical Trial Demo API</h3>
+				<p>Trial ID: the Unique ID of trail in ClinicalTrials.gov. (Example: NCT02585778)</p>
+
+				<p>Searching Word: any word you want to highlight in given trial. (Example: a-1)</p>
+			</div>
+		</div>
+
+
+	</div>
+
+	<div id="sidebar" class="col last span-3">
+
+		<div id="search" class="section">
+			<h3>Search</h3>
+			<form action="" method="post" id="test">
+   			 {% csrf_token %}
+             {{ form }}
+            <input type="submit" value="Search" />
+			</form>
+
+		</div>
+
+	</div>
+
+	<div id="footer">
+		<p id="foo"><em>P</em>TEN</p>
+
+		<p>Copyright © 2016 PTEN Philips . All rights reserved.</p>
+	</div>
 </div>
 
-<div>
-<form action="" method="post" id="test">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Search" />
-</form>
-</div>
-<div class="message" id="testbox"></div>
-<div class="message" id="msgbox"></div>
+
 <script>
-var instance = new Mark(document.querySelector("#msgbox"));
+var instance = new Mark(document.querySelector("#content"));
         var options = {
         "accuracy": {
         "value": "exactly",
@@ -37,7 +78,7 @@ var instance = new Mark(document.querySelector("#msgbox"));
 $('#test').submit(function(e){
 
     $.post('./file/',$(this).serialize(),function(data){
-        $('#msgbox').empty().append(data)
+        $('#content').empty().append(data)
          instance.mark($('#id_term').val(),options);
 
     });
