--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,62 @@
-<!doctype html>
+
+{% load staticfiles %}
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Cookbook{% endblock %}</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="{% static 'js/mark.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/master.css' %}" type="text/css" media="screen" charset="utf-8" />
+    <style>
+    mark{
+        background: orange;
+        color: black;
+
+    }
+    </style>
 </head>
 <body>
-    <h1>Cookbook</h1>
-    {% block content %}{% endblock %}
+
+<div id="wrapper" class="span-12">
+	<div id="pages">
+		<ul>
+			<li><a href="">PTEN</a></li>
+		</ul>
+	</div>
+
+	<div id="header" class="col last span-12">
+		<h1><span class="amp"> Clinical </span> Trial</h1>
+
+	</div>
+
+        <div id="content" class="col span-9" >
+		<div class="col last span-9">
+		<h4>{% block title %}{% endblock %}</h4>
+		</div>
+
+		<div class="post span-9" >
+
+			<div class="post-content last span-9 nudge-2">
+			{% block content %}{% endblock %}
+		</div>
+
+
+        </div>
+            </div>
+
+    <div id="sidebar" class="col last span-3">
+
+		{% block sidebar %}{% endblock %}
+
+	</div>
+
+
+	<div id="footer">
+		<p id="foo"><em>P</em>TEN</p>
+
+		<p>Copyright © 2016 PTEN Philips . All rights reserved.</p>
+	</div>
+
+    </div>
+
 </body>
+<script>{% block script %}{% endblock %}</script>
 </html>
