add new function

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,36 @@
 {% extends "base.html" %}
 
-{% block title %}Hello{% endblock %}
+{% block title %}<span class="by">by</span> Joseph{% endblock %}
 
 {% block content %}
-<h2><a href="./trials/">Trial Content Demo - Highlight Keywords</a></h2>
+    <div class="post span-9" >
+            <div class="post-meta col span-2">
+				<span><a href="">20 May</a></span>
+				<ul>
+					<li>In <a href="">Music</a>, <a href="">Design</a></li>
+					<li><a href="">10 comments</a></li>
+				</ul>
+			</div>
+
+        <div class="post-content last span-9 nudge-2">
+            <h3><a href="./trials/">Gene/Gene Synonyms Dictionary</a></h3>
+
+        </div>
+    </div>
+     <div class="post span-9" >
+            <div class="post-meta col span-2">
+				<span><a href="">20 May</a></span>
+				<ul>
+					<li>In <a href="">Music</a>, <a href="">Design</a></li>
+					<li><a href="">10 comments</a></li>
+				</ul>
+			</div>
+
+        <div class="post-content last span-9 nudge-2">
+            <h3><a href="./trials/">Misspelling words cases</a></h3>
+
+        </div>
+    </div>
 
 {% endblock %}
 
