--- a/templates/trail_highlight.html
+++ b/templates/trail_highlight.html
@@ -19,11 +19,14 @@
 
 
 		{% block content %}
+        <div class="post span-9" >
+        <div class="post-content last span-9 nudge-2">
 			<h3> Welcome to Clinical Trial Demo API</h3>
 				<p>Trial ID: the Unique ID of trail in ClinicalTrials.gov. (Example: NCT02585778)</p>
 
 				<p>Searching Word: any word you want to highlight in given trial. (Example: a-1)</p>
-
+        </div>
+        </div>
 		{% endblock %}
 
 		{% block sidebar %}
