--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,12 @@
 <html>
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="{% static 'js/jquery-1.3.2.min.js' %}"></script>
+    <script src="{% static 'js/jquery-ui-1.7.custom.min.js' %}"></script>
     <script src="{% static 'js/mark.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/master.css' %}" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="{% static 'css/tabs.css' %}" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="{% static 'css/grid-1080.css' %}" type="text/css" media="screen" charset="utf-8" />
     <style>
     mark{
         background: orange;
@@ -32,15 +36,12 @@
 		<h4>{% block title %}{% endblock %}</h4>
 		</div>
 
-		<div class="post span-9" >
 
-			<div class="post-content last span-9 nudge-2">
-			{% block content %}{% endblock %}
-		</div>
+
+            {% block content %}{% endblock %}
 
 
         </div>
-            </div>
 
     <div id="sidebar" class="col last span-3">
 
