--- a/static/css/master.css
+++ b/static/css/master.css
@@ -259,7 +259,16 @@ input {
 	letter-spacing: 2px;
 	line-height: 1.4;
 }
+.section label,select{
+    text-align: right;
+    clear: both;
+    float:left;
+    line-height: 1.4;
+}
 
+.section input{
+      line-height: 1.4;
+}
 .section h3 {
 	margin-bottom: 1em;
 	padding-bottom: .8em;
