--- a/templates/v_result.html
+++ b/templates/v_result.html
@@ -1,121 +1,73 @@
 {% extends "base.html" %}
+{% load trialparser %}
+
 
 {% block title %}<span class="by">by</span> Joseph{% endblock %}
 
 {% block content %}
-
     <div id="page-wrap">
-
+     <div class="post span-9" >
 		<div id="tabs">
 
     		<ul>
-        		<li><a href="#fragment-1">1</a></li>
-        		<li><a href="#fragment-2">2</a></li>
-        		<li><a href="#fragment-3">3</a></li>
-        		<li><a href="#fragment-4">4</a></li>
-        		<li><a href="#fragment-5">5</a></li>
-        		<li><a href="#fragment-6">6</a></li>
-        		<li><a href="#fragment-7">7</a></li>
-        		<li><a href="#fragment-8">8</a></li>
-        		<li><a href="#fragment-9">9</a></li>
-        		<li><a href="#fragment-10">10</a></li>
-        		<li><a href="#fragment-11">11</a></li>
-        		<li><a href="#fragment-12">12</a></li>
-        		<li><a href="#fragment-13">13</a></li>
-        		<li><a href="#fragment-14">14</a></li>
-        		<li><a href="#fragment-15">15</a></li>
+
+                {% for i in records %}
+
+        		<li><a href="#fragment-{{ forloop.counter }}">{{ forloop.counter }}</a></li>
+
+                {% endfor %}
     	   </ul>
 
-        	<div id="fragment-1" class="ui-tabs-panel">
-        	       <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-        	</div>
+            {% for rec in records %}
 
-        	<div id="fragment-2" class="ui-tabs-panel ui-tabs-hide">
-                    <p>Donec ultricies senectus tristique egestas vitae, et ac morbi habitant quam sit mi quam, malesuada leo. Vestibulum tempor Mauris tortor libero eget, egestas. eu vitae feugiat netus amet Pellentesque ante. amet, ultricies eleifend turpis sit placerat et semper. Aenean est. fames </p>
+              <div id="fragment-{{ forloop.counter }}" class="ui-tabs-panel ui-tabs-hide">
+
+
+                <b>NCT ID:  </b><a target="_blank" href="https://clinicaltrials.gov/ct2/show/{{ rec.id }}"> {{ rec.id }} </a>
+                <p><b>Title:  </b>
+                {% if rec.source.official_title %}
+                {{ rec.source.official_title }}
+                {% else %}
+                {{ rec.source.brief_title }}
+                {% endif %}
+                </p>
+                <p><b>Purpose:  </b>{{rec.source.Purpose}}</p>
+                <p><b>Description:  </b>{{rec.source.description}}</p>
+                <p><b>Maximum Age: </b>{{ rec.source.maximumAge|years  }} years</p>
+                <p><b>Minimum Age: </b>{{rec.source.minimumAge|years  }} years</p>
+                <p><b>Inclusion Criteria: </b>{{rec.source|InclusionCriteria}}</p>
+                <p><b>Exclusion Criteria: </b>{{rec.source|ExclusionCriteria}}</p>
+                <p><b>Gender: </b>{{rec.source.gender}}</p>
+
+
+
+
+
             </div>
 
-        	<div id="fragment-3" class="ui-tabs-panel ui-tabs-hide">
-            		<p>ante. Mauris Vestibulum est. fames egestas quam, leo. amet tristique sit libero egestas. ultricies mi turpis senectus Pellentesque habitant eu ac morbi netus eget, Aenean malesuada vitae, semper. eleifend et feugiat vitae amet, placerat Donec et tortor ultricies tempor quam sit </p>
-            </div>
+            {% endfor %}
 
-        	<div id="fragment-4" class="ui-tabs-panel ui-tabs-hide">
 
-        	</div>
-
-        	<div id="fragment-5" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-6" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-7" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-8" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-9" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-10" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-11" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-12" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-13" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-14" class="ui-tabs-panel ui-tabs-hide">
-
-        	</div>
-
-        	<div id="fragment-15" class="ui-tabs-panel ui-tabs-hide">
-        		<p>The end.</p>
-        	</div>
 
         </div>
 
 	</div>
 
-
-    <div class="post span-9" >
-            <div class="post-meta col span-2">
-				<span><a href="">20 May</a></span>
-				<ul>
-					<li>In <a href="">Music</a>, <a href="">Design</a></li>
-					<li><a href="">10 comments</a></li>
-				</ul>
-			</div>
-
-        <div class="post-content last span-9 nudge-2">
-            <h3><a href="./trials/">Gene/Gene Synonyms Dictionary</a></h3>
-
-        </div>
-    </div>
-
+</div>
 
 
 {% endblock %}
 
+
 {% block sidebar %}
 
-<div id="about" class="section">
-    <h3>About</h3>
-
-    <p>Read a brief introduction to clinical research, including information on types of studies and what happens during a study. Find information about eligibility to participate in a study, risks and benefits of study participation, the informed consent process, and questions to ask when considering whether to participate in a study.</p>
+<div id="search" class="section">
+    <h3>Search</h3>
+    <form action="" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit" />
+    </form>
 
 </div>
 
