--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,9 @@
 <div id="wrapper" class="span-12">
 	<div id="pages">
 		<ul>
-			<li><a href="">PTEN</a></li>
+			<li><a href="/joseph/">Home</a></li>
+            <li><a href="/joseph/trials/">Trial</a></li>
+            <li><a href="/joseph/validation/">Validation</a></li>
 		</ul>
 	</div>
 
