--- a/templates/index.html
+++ b/templates/index.html
@@ -5,29 +5,29 @@
 {% block content %}
     <div class="post span-9" >
             <div class="post-meta col span-2">
-				<span><a href="">20 May</a></span>
+				<span><a href="">Trial</a></span>
 				<ul>
-					<li>In <a href="">Music</a>, <a href="">Design</a></li>
-					<li><a href="">10 comments</a></li>
+					<li>Function <a href="">highlight keyword</a></li>
+					<li><a href="">In progress</a></li>
 				</ul>
 			</div>
 
         <div class="post-content last span-9 nudge-2">
-            <h3><a href="./trials/">Gene/Gene Synonyms Dictionary</a></h3>
+            <h3><a href="./trials/">Trial Demo API</a></h3>
 
         </div>
     </div>
      <div class="post span-9" >
             <div class="post-meta col span-2">
-				<span><a href="">20 May</a></span>
+				<span><a href="">Validation</a></span>
 				<ul>
-					<li>In <a href="">Music</a>, <a href="">Design</a></li>
-					<li><a href="">10 comments</a></li>
+					<li>Function <a href="">Questionnaire</a></li>
+					<li><a href="">In Progress</a></li>
 				</ul>
 			</div>
 
         <div class="post-content last span-9 nudge-2">
-            <h3><a href="./trials/">Misspelling words cases</a></h3>
+            <h3><a href="./validation/">Validation API</a></h3>
 
         </div>
     </div>
