--- a/static/css/master.css
+++ b/static/css/master.css
@@ -266,8 +266,10 @@ input {
     line-height: 1.4;
 }
 
-.section input{
-      line-height: 1.4;
+.section input,multiple{
+
+    line-height: 1.4;
+
 }
 .section h3 {
 	margin-bottom: 1em;
