--- a/templates/v_result.html
+++ b/templates/v_result.html
@@ -60,7 +60,7 @@
 {% block sidebar %}
 
 <div id="search" class="section">
-    <h3>Search</h3>
+    <h3>{{ subtitle }}</h3>
     <form action="" method="post">
     {% csrf_token %}
     {{ form }}
