--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
         color: black;
 
     }
+    .hideme
+    {
+        display:none;
+        visibility:hidden;
+    }
     </style>
 
 </head>
@@ -25,7 +30,7 @@
 		<ul>
 			<li><a href="/joseph/">Home</a></li>
             <li><a href="/joseph/trials/">Trial</a></li>
-            <li><a href="/joseph/validation/">Validation</a></li>
+            <li><a href="/joseph/test/">Validation</a></li>
 		</ul>
 	</div>
 
