--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 			</div>
 
         <div class="post-content last span-9 nudge-2">
-            <h3><a href="./validation/">Validation API</a></h3>
+            <h3><a href="./test/">Validation </a></h3>
 
         </div>
     </div>
