--- a/templates/base_result.html
+++ b/templates/base_result.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="{% static 'js/jquery-1.3.2.min.js' %}"></script>
+    <script src="{% static 'js/jquery-1.6.1.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui-1.7.custom.min.js' %}"></script>
     <script src="{% static 'js/mark.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/master.css' %}" type="text/css" media="screen" charset="utf-8" />
@@ -15,6 +15,11 @@
         color: black;
 
     }
+    .hideme
+    {
+        display:none;
+        visibility:hidden;
+    }
     </style>
 
 </head>
@@ -25,7 +30,7 @@
 		<ul>
 			<li><a href="/joseph/">Home</a></li>
             <li><a href="/joseph/trials/">Trial</a></li>
-            <li><a href="/joseph/validation/">Validation</a></li>
+            <li><a href="/joseph/test/">Validation</a></li>
 		</ul>
 	</div>
 
