add result demo

--- a/templates/base_result.html
+++ b/templates/base_result.html
@@ -6,6 +6,7 @@
     <script src="{% static 'js/jquery-1.6.1.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui-1.7.custom.min.js' %}"></script>
     <script src="{% static 'js/mark.min.js' %}"></script>
+    <script src="{% static 'js/Chart.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/master.css' %}" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="{% static 'css/tabs.css' %}" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="{% static 'css/grid-1080.css' %}" type="text/css" media="screen" charset="utf-8" />
@@ -31,6 +32,7 @@
 			<li><a href="/joseph/">Home</a></li>
             <li><a href="/joseph/trials/">Trial</a></li>
             <li><a href="/joseph/test/">Validation</a></li>
+            <li><a href="/joseph/test/result/">Result</a></li>
 		</ul>
 	</div>
 
